--- a/_includes/subnav-components.html
+++ b/_includes/subnav-components.html
@@ -10,11 +10,14 @@
       <a class="navbar-item is-tab {% if page.doc-subtab == 'pricingtable' %}is-active{% endif %}" href="{{ site.url }}/components/pricingtable/">
         Pricing table
       </a>
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'quickview' %}is-active{% endif %}" href="{{ site.url }}/components/quickview/">
+        Quickview
+      </a>
       <a class="navbar-item is-tab {% if page.doc-subtab == 'steps' %}is-active{% endif %}" href="{{ site.url }}/components/steps/">
         Steps
       </a>
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'quickview' %}is-active{% endif %}" href="{{ site.url }}/components/quickview/">
-        Quickview
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'timeline' %}is-active{% endif %}" href="{{ site.url }}/components/timeline/">
+        Timeline
       </a>
     </div>
   </div>
