--- a/layout/divider.html
+++ b/layout/divider.html
@@ -1,7 +1,7 @@
 ---
 title: Divider
 layout: documentation
-doc-tab: elements
+doc-tab: layout
 doc-subtab: divider
 npm-version: 0.0.1
 variables:
@@ -13,7 +13,7 @@ variables:
   value: $grey-light
 ---
 
-{% include subnav-elements.html %}
+{% include subnav-layout.html %}
 
 {% capture divider_example %}
 <div class="is-divider" data-content="OR"></div>
