--- a/_includes/subnav-layout.html
+++ b/_includes/subnav-layout.html
@@ -1,8 +1,8 @@
 <nav class="navbar has-shadow">
   <div class="container">
     <div class="navbar-tabs">
-      <a class="navbar-item is-tab {% if page.doc-subtab == 'timeline' %}is-active{% endif %}" href="{{ site.url }}/layout/timeline/">
-        Timeline
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'divider' %}is-active{% endif %}" href="{{ site.url }}/layout/divider/">
+        Divider
       </a>
     </div>
   </div>
