--- a/components/timeline.html
+++ b/components/timeline.html
@@ -1,7 +1,7 @@
 ---
 title: Timeline
 layout: documentation
-doc-tab: layout
+doc-tab: components
 doc-subtab: timeline
 npm-version: 1.1.0
 variables:
@@ -21,7 +21,7 @@ variables:
   value: 16 24 32 48 64 96 128
 ---
 
-{% include subnav-layout.html %}
+{% include subnav-components.html %}
 
 {% capture timeline_example %}
 <div class="timeline">
