Fix modal z-index

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -22,7 +22,7 @@
             <a href="{{ site.url }}">Overview</a>
           </li>
           <li {% if page.doc-tab == 'layout' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/layout/timeline/">Layout</a>
+            <a href="{{ site.url }}/layout/divider/">Layout</a>
           </li>
           <li {% if page.doc-tab == 'form' %}class="is-active"{% endif %}>
             <a href="{{ site.url }}/form/checkradio">Form</a>
