Add tagsinput and restructure folders

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
 </footer>
 
 <script src="{{ site.url }}/vendor/clipboard-1.7.1.min.js"></script>
-<script src="{{ site.url }}/assets/js/main.js?v={{ site.time | date: '%Y%m%d%H%M' }}"></script>
+<script src="{{ site.url }}/js/main.js?v={{ site.time | date: '%Y%m%d%H%M' }}"></script>
 
 <script async defer type="text/javascript">
   (function() {
