--- a/_includes/subnav-form.html
+++ b/_includes/subnav-form.html
@@ -13,6 +13,9 @@
       <a class="navbar-item is-tab {% if page.doc-subtab == 'switch' %}is-active{% endif %}" href="{{ site.url }}/form/switch/">
         Switch
       </a>
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'tagsinput' %}is-active{% endif %}" href="{{ site.url }}/form/tagsinput/">
+        TagsInput
+      </a>
     </div>
   </div>
 </nav>
