--- a/components/calendar.html
+++ b/components/calendar.html
@@ -275,7 +275,7 @@ document.addEventListener( 'DOMContentLoaded', function () {
 
     {% include variables.html %}
 
-    <script type="text/javascript" src="{{ site.url}}/assets/js/datepicker.js"></script>
+    <script type="text/javascript" src="{{ site.url}}/js/datepicker.js"></script>
     <script type="text/javascript">
     document.addEventListener( 'DOMContentLoaded', function () {
       var datePicker = new DatePicker( document.getElementById( 'datepickerDemo' ), {} );
