--- a/components/quickview.html
+++ b/components/quickview.html
@@ -166,4 +166,4 @@ document.addEventListener( 'DOMContentLoaded', function () {
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url }}/assets/js/quickview.js"></script>
+<script type="text/javascript" src="{{ site.url }}/js/quickview.js"></script>
