--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
   {% if page.mdi %}
     <link rel="stylesheet" href="{{ site.mdi }}">
   {% endif %}
-  <link rel="stylesheet" href="{{ site.url }}/documentation.min.css?v={{ site.time | date: "%Y%m%d%H%M" }}">
+  <link rel="stylesheet" href="{{ site.url }}/css/documentation.css?v={{ site.time | date: "%Y%m%d%H%M" }}">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}">
@@ -24,7 +24,6 @@
   <meta property="og:url" content="{{site.url}}">
   <meta property="og:type" content="website">
   <meta property="og:title" content="{{site.title}}">
-  <meta property="og:image" content="{{site.url}}/images/bulma-banner.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
