--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,8 @@
             Source code licensed <a href="https://opensource.org/licenses/mit-license.php">MIT</a>.
           </small>
         </p>
+        <br />
+        <a href='https://ko-fi.com/Q5Q15OKN' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://az743702.vo.msecnd.net/cdn/kofi1.png?v=0' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
       </div>
     </div>
   </div>
