Add Carousel extension

--- a/_includes/subnav-components.html
+++ b/_includes/subnav-components.html
@@ -7,6 +7,9 @@
       <a class="navbar-item is-tab {% if page.doc-subtab == 'calendar' %}is-active{% endif %}" href="{{ site.url }}/components/calendar/">
         Calendar
       </a>
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'carousel' %}is-active{% endif %}" href="{{ site.url }}/components/carousel/">
+        Carousel
+      </a>
       <a class="navbar-item is-tab {% if page.doc-subtab == 'pricingtable' %}is-active{% endif %}" href="{{ site.url }}/components/pricingtable/">
         Pricing table
       </a>
