--- a/css/documentation.sass
+++ b/css/documentation.sass
@@ -7,6 +7,7 @@
 @import 'accordion.sass'
 @import 'badge.sass'
 @import 'calendar.sass'
+@import 'carousel.sass'
 @import 'checkradio.sass'
 @import 'divider.sass'
 @import 'iconPicker.sass'
