--- a/components/carousel.html
+++ b/components/carousel.html
@@ -14,19 +14,19 @@ npm-version: 0.1.0
   <div class='carousel-container'>
     <div class='carousel-content carousel-animate'>
       <div class='carousel-item'>
-        <img class="is-background" src="https://pixabay.com/get/eb3cb40c2ff6033ed1584d05fb0938c9bd22ffd41cb0104590f7c37aa2/box-2953722_1280.jpg" alt="" width="640" height="310" />
+        <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
         <div class="title">Merry Christmas</div>
       </div>
       <div class='carousel-item'>
-        <img class="is-background" src="https://pixabay.com/get/e032b6092cf51c22d2524518a33219c8b66ae3d018b0154492f2c07a/hand-977641_1280.jpg" alt="" width="640" height="310" />
+        <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
         <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
       </div>
       <div class='carousel-item'>
-        <img class="is-background" src="https://pixabay.com/get/eb3cb50d29f4003ed1584d05fb0938c9bd22ffd41cb0104590f7c370a4/sushi-2942101_1280.jpg" alt="" width="640" height="310" />
+        <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
         <div class="title">Sushi time</div>
       </div>
       <div class='carousel-item'>
-        <img class="is-background" src="https://pixabay.com/get/eb32b90d20f2033ed1584d05fb0938c9bd22ffd41cb0104590f7c57ea4/moorabbis-2782862_1280.jpg" alt="" width="640" height="310" />
+        <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
         <div class="title">Life</div>
       </div>
     </div>
