Add indeterminate state

--- a/_sass/checkradio.sass
+++ b/_sass/checkradio.sass
@@ -211,6 +211,13 @@ $checkradio-top-offset: 0rem !default
             &::after
               border-color: $color-invert !important
 
+  &:indeterminate
+    + label
+      &::after
+        display: initial
+        transform: rotate(90deg)
+        border-bottom: none
+
 .is-checkradio[type="radio"]
   + label
     &::before
