--- a/components/accordion.html
+++ b/components/accordion.html
@@ -90,7 +90,7 @@ npm-version: 0.1.0
 
     <hr>
 
-    {% include snippet.html content=accordion_example size="one-half" %}
+    {% include snippet.html content=accordion_example size="one-half" more=true %}
 
     {% include anchor.html name="Javascript" %}
     <div class="notification is-info">
