--- a/components/pricingtable.html
+++ b/components/pricingtable.html
@@ -258,24 +258,15 @@ variables:
 
     <hr>
 
-    <div class="bd-example">
-      {{pricingtable_example}}
-    </div>
-    {% highlight html %}{{pricingtable_example}}{% endhighlight %}
+    {% include snippet.html content=pricingtable_example horizontal=true more=true %}
 
     <h3 class="title">Comparative</h3>
     <h4 class="subtitle">You can choose to display the pricing tables as a comparative table by adding <code>is-comparative</code> modifier to the pricing-table element.</h4>
-    <div class="bd-example">
-      {{pricingtable_comparison_example}}
-    </div>
-    {% highlight html %}{{pricingtable_comparison_example}}{% endhighlight %}
+    {% include snippet.html content=pricingtable_comparison_example horizontal=true more=true %}
 
     <h3 class="title">Orientation</h3>
     <h4 class="subtitle">You can choose to display the pricing tables horizontally just by adding <code>is-horizontal</code> modifier to the pricing-table element.</h4>
-    <div class="bd-example">
-      {{pricingtable_horizontal_example}}
-    </div>
-    {% highlight html %}{{pricingtable_horizontal_example}}{% endhighlight %}
+    {% include snippet.html content=pricingtable_horizontal_example horizontal=true more=true %}
 
     {% include variables.html %}
   </div>
