--- a/components/timeline.html
+++ b/components/timeline.html
@@ -298,30 +298,30 @@ variables:
     <hr>
 
     <h3 class="subtitle">Default layout</h3>
-    {% include snippet.html content=timeline_example size="one-half" %}
+    {% include snippet.html content=timeline_example size="one-half" more=true %}
 
     {% include anchor.html name="Colors" %}
     <h4 class="subtitle">You can use color modifiers on timeline-marker to change its color</h4>
-    {% include snippet.html content=timeline_colors_example size="one-half" %}
+    {% include snippet.html content=timeline_colors_example size="one-half" more=true %}
 
 
     <br />
     <h4 class="subtitle">You can use color modifiers on timeline-item to change the line color</h4>
-    {% include snippet.html content=timeline_colors_line_example size="one-half" %}
+    {% include snippet.html content=timeline_colors_line_example size="one-half" more=true %}
 
     <br />
     <h4 class="subtitle">You can even use them both together</h4>
-    {% include snippet.html content=timeline_colors_both_example size="one-half" %}
+    {% include snippet.html content=timeline_colors_both_example size="one-half" more=true %}
 
     <br />
 
     {% include anchor.html name="Positions" %}
     <h4 class="subtitle">You can use <code>is-centered</code> modifiers on timeline</h4>
-    {% include snippet.html content=timeline_centered_example size="one-half" %}
+    {% include snippet.html content=timeline_centered_example size="one-half" more=true %}
 
     <br />
     <h4 class="subtitle">You can use <code>is-rtl</code> modifiers on timeline</h4>
-    {% include snippet.html content=timeline_rtl_example size="one-half" %}
+    {% include snippet.html content=timeline_rtl_example size="one-half" more=true %}
 
     {% include variables.html %}
   </div>
