--- a/components/carousel.html
+++ b/components/carousel.html
@@ -40,6 +40,76 @@ npm-version: 0.1.0
 </div>
 {% endcapture %}
 
+{% capture hero_carousel_example %}
+<section class="hero hero-carousel">
+  <div class="hero-head">
+    <nav class="navbar is-transparent">
+      <div class="container">
+        <div class="navbar-brand">
+          <a class="navbar-item">
+            <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">
+          </a>
+          <span class="navbar-burger burger" data-target="navbarMenuHeroA">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+        </div>
+        <div id="navbarMenuHeroA" class="navbar-menu">
+          <div class="navbar-end">
+            <a class="navbar-item is-active">
+              Home
+            </a>
+            <a class="navbar-item">
+              Examples
+            </a>
+            <a class="navbar-item">
+              Documentation
+            </a>
+            <span class="navbar-item">
+              <a class="button is-primary is-inverted">
+                <span class="icon">
+                  <i class="fa fa-github"></i>
+                </span>
+                <span>Download</span>
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div class="hero-body">
+    <div class='carousel-container'>
+      <div class='carousel-content carousel-animate'>
+        <div class='carousel-item'>
+          <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
+          <div class="title">Merry Christmas</div>
+        </div>
+        <div class='carousel-item'>
+          <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
+          <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
+        </div>
+        <div class='carousel-item'>
+          <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
+          <div class="title">Sushi time</div>
+        </div>
+        <div class='carousel-item'>
+          <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
+          <div class="title">Life</div>
+        </div>
+      </div>
+      <div class="carousel-nav-left">
+        <i class="fa fa-chevron-left" aria-hidden="true"></i>
+      </div>
+      <div class="carousel-nav-right">
+        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+      </div>
+    </div>
+  </div>
+</section>
+{% endcapture %}
+
 {% capture carousel_js %}
 <script type="text/javascript" src="./carousel.js"></script>
 {% endcapture %}
@@ -91,7 +161,10 @@ npm-version: 0.1.0
     </div>
 
     <hr>
-    {% include snippet.html content=carousel_example size="one-half" %}
+    {% include snippet.html content=carousel_example size="one-half" more=true %}
+
+    {% include anchor.html name="Hero Carousel" %}
+    {% include snippet.html content=hero_carousel_example horizontal=true more=true %}
 
     {% include anchor.html name="Javascript" %}
     <div class="notification is-info">
