--- a/_sass/carousel.sass
+++ b/_sass/carousel.sass
@@ -7,6 +7,16 @@
   margin: auto
   display: flex
 
+.hero-carousel
+  .hero-body
+    padding: 0
+    position: relative
+    width: 100%
+    height: auto
+    border: none
+    margin: auto
+    display: flex
+
 .carousel-navigation
   flex-shrink: 0
   display: flex
@@ -68,6 +78,7 @@
     display: inline-block
     padding: 0
     margin: 0
+    min-width: 100%
   .title
     position: absolute
     left: 0
