--- a/components/carousel.html
+++ b/components/carousel.html
@@ -41,7 +41,35 @@ npm-version: 0.1.0
 {% endcapture %}
 
 {% capture hero_carousel_example %}
-<section class="hero hero-carousel">
+<section class="hero is-medium">
+  <div class="hero-carousel">
+    <div class='carousel-container'>
+      <div class='carousel-content carousel-animate'>
+        <div class='carousel-item'>
+          <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" />
+          <div class="title">Merry Christmas</div>
+        </div>
+        <div class='carousel-item'>
+          <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" />
+          <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
+        </div>
+        <div class='carousel-item'>
+          <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" />
+          <div class="title">Sushi time</div>
+        </div>
+        <div class='carousel-item'>
+          <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" />
+          <div class="title">Life</div>
+        </div>
+      </div>
+      <div class="carousel-nav-left">
+        <i class="fa fa-chevron-left" aria-hidden="true"></i>
+      </div>
+      <div class="carousel-nav-right">
+        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+      </div>
+    </div>
+  </div>
   <div class="hero-head">
     <nav class="navbar is-transparent">
       <div class="container">
@@ -57,16 +85,16 @@ npm-version: 0.1.0
         </div>
         <div id="navbarMenuHeroA" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item is-active">
+            <a class="navbar-item has-text-white is-active">
               Home
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item has-text-white">
               Examples
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item has-text-white">
               Documentation
             </a>
-            <span class="navbar-item">
+            <span class="navbar-item has-text-white">
               <a class="button is-primary is-inverted">
                 <span class="icon">
                   <i class="fa fa-github"></i>
@@ -80,32 +108,10 @@ npm-version: 0.1.0
     </nav>
   </div>
   <div class="hero-body">
-    <div class='carousel-container'>
-      <div class='carousel-content carousel-animate'>
-        <div class='carousel-item'>
-          <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
-          <div class="title">Merry Christmas</div>
-        </div>
-        <div class='carousel-item'>
-          <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
-          <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
-        </div>
-        <div class='carousel-item'>
-          <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
-          <div class="title">Sushi time</div>
-        </div>
-        <div class='carousel-item'>
-          <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
-          <div class="title">Life</div>
-        </div>
-      </div>
-      <div class="carousel-nav-left">
-        <i class="fa fa-chevron-left" aria-hidden="true"></i>
-      </div>
-      <div class="carousel-nav-right">
-        <i class="fa fa-chevron-right" aria-hidden="true"></i>
-      </div>
-    </div>
+
+  </div>
+  <div class="hero-foot">
+
   </div>
 </section>
 {% endcapture %}
