--- a/components/carousel.html
+++ b/components/carousel.html
@@ -107,8 +107,21 @@ npm-version: 0.1.1
       </div>
     </nav>
   </div>
-  <div class="hero-body">
-
+  <div class="hero-body has-text-centered">
+    <div class="columns is-mobile is-centered">
+      <div class="column is-half is-narrow">
+        <div class="field has-addons">
+          <div class="control is-expanded">
+            <input class="input" type="text" placeholder="Find a repository">
+          </div>
+          <div class="control">
+            <a class="button is-info">
+              Search
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="hero-foot">
 
