--- a/components/carousel.html
+++ b/components/carousel.html
@@ -47,19 +47,15 @@ npm-version: 0.1.1
       <div class='carousel-content carousel-animate'>
         <div class='carousel-item'>
           <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" />
-          <div class="title">Merry Christmas</div>
         </div>
         <div class='carousel-item'>
           <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" />
-          <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
         </div>
         <div class='carousel-item'>
           <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" />
-          <div class="title">Sushi time</div>
         </div>
         <div class='carousel-item'>
           <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" />
-          <div class="title">Life</div>
         </div>
       </div>
       <div class="carousel-nav-left">
@@ -124,7 +120,18 @@ npm-version: 0.1.1
     </div>
   </div>
   <div class="hero-foot">
-
+    <nav class="tabs">
+      <div class="container">
+        <ul>
+          <li class="is-active"><a class="has-text-white">Overview</a></li>
+          <li><a class="has-text-white">Modifiers</a></li>
+          <li><a class="has-text-white">Grid</a></li>
+          <li><a class="has-text-white">Elements</a></li>
+          <li><a class="has-text-white">Components</a></li>
+          <li><a class="has-text-white">Layout</a></li>
+        </ul>
+      </div>
+    </nav>
   </div>
 </section>
 {% endcapture %}
