Better hero-carousel example

--- a/components/carousel.html
+++ b/components/carousel.html
@@ -120,10 +120,10 @@ npm-version: 0.1.1
     </div>
   </div>
   <div class="hero-foot">
-    <nav class="tabs">
+    <nav class="tabs is-boxed is-fullwidth">
       <div class="container">
         <ul>
-          <li class="is-active"><a class="has-text-white">Overview</a></li>
+          <li class="is-active"><a>Overview</a></li>
           <li><a class="has-text-white">Modifiers</a></li>
           <li><a class="has-text-white">Grid</a></li>
           <li><a class="has-text-white">Elements</a></li>
