--- a/components/carousel.html
+++ b/components/carousel.html
@@ -190,8 +190,13 @@ npm-version: 0.1.1
     {% include snippet.html content=carousel_example size="one-half" more=true %}
 
     {% include anchor.html name="Hero Carousel" %}
+  </div>
+</section>
+<section class="section is-fullwidth">
     {% include snippet.html content=hero_carousel_example horizontal=true more=true %}
-
+</section>
+<section class="section">
+  <div class="container">
     {% include anchor.html name="Javascript" %}
     <div class="notification is-info">
       <p>You don't have to write any JavaScript code.</p>
