--- a/components/carousel.html
+++ b/components/carousel.html
@@ -5,6 +5,13 @@ layout: documentation
 doc-tab: components
 doc-subtab: carousel
 npm-version: 0.1.2
+variables:
+- name $carousel-nav-background
+  value: rgba($white, 0.7)
+- name: $carousel-title-background
+  value: rgba($white, 0.6)
+- name: $carousel-title-size
+  value: $size-7
 ---
 
 {% include subnav-components.html %}
@@ -215,6 +222,8 @@ npm-version: 0.1.2
         </div>
       </div>
     </div>
+    
+    {% include variables.html %}
 
   </div>
 </section>
