--- a/components/carousel.html
+++ b/components/carousel.html
@@ -6,7 +6,7 @@ doc-tab: components
 doc-subtab: carousel
 npm-version: 0.1.2
 variables:
-- name $carousel-nav-background
+- name: $carousel-nav-background
   value: rgba($white, 0.7)
 - name: $carousel-title-background
   value: rgba($white, 0.6)
