--- a/components/carousel.html
+++ b/components/carousel.html
@@ -8,6 +8,8 @@ npm-version: 0.1.2
 variables:
 - name: $carousel-nav-background
   value: rgba($white, 0.7)
+- name: $carousel-nav-color:
+  value: $text
 - name: $carousel-title-background
   value: rgba($white, 0.6)
 - name: $carousel-title-size
