--- a/components/carousel.html
+++ b/components/carousel.html
@@ -12,6 +12,8 @@ variables:
   value: $text
 - name: $carousel-title-background
   value: rgba($white, 0.6)
+- name: $carousel-title-size
+  value: $size-7
 ---
 
 {% include subnav-components.html %}
