--- a/components/carousel.html
+++ b/components/carousel.html
@@ -4,7 +4,7 @@ description: Display a Image / Content carousel
 layout: documentation
 doc-tab: components
 doc-subtab: carousel
-npm-version: 0.1.2
+npm-version: 0.2.0
 variables:
 - name: $carousel-nav-background
   value: rgba($white, 0.7)
@@ -21,7 +21,7 @@ variables:
 {% capture carousel_example %}
 <div class='carousel'>
   <div class='carousel-container'>
-    <div class='carousel-content carousel-animate'>
+    <div class='carousel-content carousel-animate carousel-animate-slide'>
       <div class='carousel-item'>
         <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
         <div class="title">Merry Christmas</div>
@@ -53,7 +53,7 @@ variables:
 <section class="hero is-medium">
   <div class="hero-carousel">
     <div class='carousel-container'>
-      <div class='carousel-content carousel-animate'>
+      <div class='carousel-content carousel-animate carousel-animate-fade'>
         <div class='carousel-item'>
           <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" />
         </div>
@@ -198,6 +198,14 @@ variables:
 
     <hr>
     {% include snippet.html content=carousel_example size="one-half" more=true %}
+    <hr>
+    <div class="message is-warning">
+      <div class="message-body">
+        <div class="content">
+          You can animate navigation between items by using <code>carousel-animate-slide</code> or <code>carousel-animate-fade</code> classes on carousel-content element.
+        </div>
+      </div>
+    </div>
 
     {% include anchor.html name="Hero Carousel" %}
   </div>
@@ -225,7 +233,7 @@ variables:
         </div>
       </div>
     </div>
-    
+
     {% include variables.html %}
 
   </div>
