--- a/_sass/tagsinput.sass
+++ b/_sass/tagsinput.sass
@@ -7,3 +7,6 @@
     border: none
     margin-bottom: .1em !important
     margin-top: .1em !important
+  .tag
+    &.is-active
+      background-color: $primary
