--- a/components/accordion.html
+++ b/components/accordion.html
@@ -108,4 +108,4 @@ npm-version: 0.1.7
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url }}/js/accordion.js"></script>
+<script type="text/javascript" src="{{ site.url }}/js/accordion.min.js"></script>
