--- a/components/calendar.html
+++ b/components/calendar.html
@@ -272,7 +272,7 @@ document.addEventListener( 'DOMContentLoaded', function () {
 
     {% include variables.html %}
 
-    <script type="text/javascript" src="{{ site.url}}/js/datepicker.js"></script>
+    <script type="text/javascript" src="{{ site.url}}/js/datepicker.min.js"></script>
     <script type="text/javascript">
     document.addEventListener( 'DOMContentLoaded', function () {
       var datePicker = new DatePicker( document.getElementById( 'datepickerDemo' ), {} );
