--- a/components/carousel.html
+++ b/components/carousel.html
@@ -239,4 +239,4 @@ variables:
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url }}/js/carousel.js"></script>
+<script type="text/javascript" src="{{ site.url }}/js/carousel.min.js"></script>
