--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -2,6 +2,7 @@ $calendar-border: none !default
 $calendar-border-radius: $radius-small !default
 $calendar-header-background-color: $primary !default
 $calendar-days-background-color: transparent !default
+$calendar-days-color: $grey-lighter !default
 $calendar-date-hover: $white-ter !default
 $calendar-today-background: transparent !default
 $calendar-today-border-color: $primary !default
@@ -79,7 +80,7 @@ $calendar-header-padding: 1em 1em 0 1em !default
         background: transparent
         border: .1rem solid transparent
         border-radius: 100%
-        color: $text
+        color: $calendar-days-color
         cursor: pointer
         height: 2.2rem
         line-height: 1.4rem
